--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -1,178 +1,152 @@
 [module/workspace]
-exec = leftwm-state -w $index -t $HOME/.config/leftwm/themes/dref/template.liquid
+exec = leftwm-state -w $INDEX -t $HOME/.config/leftwm/themes/dref/template.liquid
 tail = true
 type = custom/script
 
 [module/network]
-accumulate-stats                   = false
-format-connected                   = <label-connected>
-format-connected-prefix            = ${icons.network-connected}
-format-connected-prefix-foreground = ${rosepine.iris}
-format-connected-background 	   = ${rosepine.base}
-format-connected-foreground 	   = ${rosepine.text}
-format-disconnected                = <label-disconnected>
-format-packetloss                  = <label-packetloss>
+type                               = internal/network
 interface                          = enp4s0
 interface-type                     = wired
 interval                           = 1.0
-label-connected                    = %downspeed:7%
-label-discconnected-foreground     = ${rosepine.love}
-label-disconnected                 = ${icons.network-disconnected}
-label-packetloss                   = ${icons.network-loss}
-speed-unit                         = B
-type                               = internal/network
+accumulate-stats                   = false
 unknown-as-up                      = false
+speed-unit                         = B
+label-connected 		   = %downspeed:3%%
+format-connected                   = <label-connected>
+format-connected-padding           = 1
+format-connected-prefix            = "%{T1}󰱓  %{T-}"
+format-connected-prefix-foreground = ${catppuccin-mocha.green}
+label-disconnected                 = "%{T1}%{F#e30909}󰅛 %{F-}%{T-}"
+format-disconnected                = <label-disconnected>
 
 [module/memory]
+type                     = internal/memory
+interval                 = 1
+warn-percentage          = 90
+label                    = %percentage_used:3%% (%used%)
 format                   = <label>
 format-padding           = 1
-format-prefix            = ${icons.memory}
-format-background 	 = ${rosepine.base}
-format-foreground 	 = ${rosepine.text}
-format-prefix-foreground = ${rosepine.foam}
-interval                 = 1
-label                    = %percentage_used:3%% (%used%)
-type                     = internal/memory
-warn-percentage          = 95
+format-prefix            = "%{T0} %{T-}"
+label-warn 		 = "%percentage_used:3%% (%used%)"
+format-warn              = <label-warn>
+format-warn-prefix       = "%{T0} %{T-}"
+format-prefix-foreground = ${catppuccin-mocha.mauve}
+format-warn-padding      = 1
+format-warn-foreground   = ${catppuccin-mocha.error}
 
 [module/cpu]
-interval                 = 0.5
-format                   = <label>
-format-background 	 = ${rosepine.base}
-format-foreground 	 = ${rosepine.text}
-format-padding           = 1
-format-prefix            = ${icons.cpu}
-format-prefix-foreground = ${rosepine.gold}
-format-warn              = <label-warn>
-label                    = %percentage:3%%
-label-warn               = %percentage%%
-warn-percentage          = 75
 type                     = internal/cpu
+interval                 = 1
+warn-percentage          = 80
+label                    = %percentage:3%%
+format                   = <label>
+format-padding           = 1
+format-prefix            = "%{T0}%{T-}"
+format-prefix-foreground = ${catppuccin-mocha.blue}
+label-warn               = %percentage:3%%
+format-warn              = <label-warn>
+format-warn-padding      = 1
+format-warn-prefix       = "%{T0}%{T-}"
+format-warn-prefix-foreground = ${catppuccin-mocha.error}
+format-warn-foreground = ${catppuccin-mocha.error}
 
 [module/temperature]
-base-temperature      = 30
+type                  = internal/temperature
+base-temperature      = 50
 format                = <ramp> <label>
-;format-prefix         = ${icons.temperature-normal}
-format-padding        = 1
-format-background     = ${rosepine.base}
-format-foreground     = ${rosepine-moon.text}
-format-warn           = <ramp> <label-warn>
-format-warn-padding   = 1
 hwmon-path            = ${env:HWMON}
 interval              = 1.0
-label                 = %temperature-c%
-label-warn            = %temperature-c%
-label-warn-foreground = ${rosepine.love}
-ramp-0                = ${icons.temperature-cold}
-ramp-1                = ${icons.temperature-normal}
-ramp-2                = ${icons.temperature-hot}
 thermal-zone          = 2
-type                  = internal/temperature
 units                 = true
 warn-temperature      = 75
+label                 = %temperature-c%
+label-warn            = %temperature-c%
+label-warn-foreground = #db2a1a
+format-padding        = 1
+format-warn           = <ramp> <label-warn>
+format-warn-padding   = 1
+ramp-0                = %{T1}%{F#458588}%{F-}%{T-}
+ramp-1                = %{T1}%{F#a34037}%{F-}%{T-}
+ramp-2                = %{T1}%{F#cc241d}%{F-}%{T-}
+ramp-foreground       = ${catppuccin-mocha.foam}
 
 [module/filesystem]
-fixed-values                     = false
-format-mounted                   = <label-mounted>
-format-mounted-background	 = ${rosepine.base}
-format-mounted-foreground	 = ${rosepine.text}
-format-mounted-prefix            = ${icons.filesystem}
-format-mounted-prefix-foreground = ${rosepine.pine}
-interval                         = 1
-label-mounted                    = %used:3% of %total% (%percentage_used%%)
-mount-0                          = /
 type                             = internal/fs
+fixed-values                     = false
+interval                         = 1
+mount-0                          = /
 warn-percentage                  = 90
+label-mounted                    = %used:3% of %total% (%percentage_used%% used)
+format-mounted                   = <label-mounted>
+format-mounted-padding           = 1
+format-mounted-prefix            = "%{T1}󰋊 %{T-}"
+format-mounted-prefix-foreground = ${catppuccin-mocha.maroon}
 
-[module/archupdate]
-exec     = "$DOTFILES/scripts/archtools update --count --notify"
-interval = 21600
-format-padding = 1
-format-prefix = ${icons.update}
-format-prefix-foreground = ${rosepine-dawn.gold}
-format-prefix-background = ${rosepine.base}
-format-foreground = ${rosepine.text}
-format-background = ${rosepine.base}
-label    = " %output% "
-tail     = false
-type     = custom/script
-click-left = dunstctl history-pop 755
-double-click-left = "$DOTFILES/scripts/archtools update --count --notify"
- 
+[module/update-hook]
+type      			 = custom/ipc
+initial   			 = 0
+hook-0    			 = archtools update -cn -a 12 --log off
+hook-1    			 = kitty -e --detach archtools update -i --log off 
+label 	  			 = %output%
+format    			 = <output>
+format-padding			 = 1
+format-prefix 	        	 = "%{T1}󱘺 %{T-}"
+format-prefix-foreground 	 = ${catppuccin-mocha.blue}
+format-foreground 	         = ${catppuccin-mocha.error}
+click-left			 = "dunstctl history-pop 755"
+click-right			 = "#updates.hook.1"
 
-[module/vpn]
-exec     = $HOME/.config/polybar/vpn status
-interval = 1
-format-padding = 1
-format-prefix = 
-format-prefix-foreground = ${rosepine.blue}
-format-prefix-background = ${rosepine.background}
-format-foreground = ${rosepine.blue}
-format-background = ${rosepine.background}
-label    = " %output%"
-tail     = false
+[module/update]
 type     = custom/script
-click-left = $HOME/.config/polybar/vpn toggle
-click-right = $HOME/.config/polybar/vpn update_status
+exec     = "polybar-msg action update-hook hook 0 >/dev/null"
+interval = 43200
+tail     = false
  
 [module/uptime]
+type     = custom/script
+tail     = false
 exec     = uptime -p | sed -e 's/up //g' | sed -e 's/ hours, /h:/g' | sed -e 's/ minutes/m/g'
 interval = 90
+label    = "%output%"
 format-padding = 1
-format-prefix = ${icons.uptime}
-format-prefix-foreground = ${rosepine-dawn.gold}
-;format-prefix-background = ${rosepine.base}
-format-background = ${rosepine.base}
-label    = " %output%"
-tail     = false
-type     = custom/script
+format-prefix = "%{T1}󰔚 %{T-}"
+format-prefix-foreground = ${catppuccin-mocha.peach}
 
 [module/date]
+type                     = internal/date
+interval                 = 1.0
+time                     = %A, %d/%m/%y %H:%M
+label                    = "%time%"
 format                   = <label>
 format-padding		 = 1
-format-background	 = ${rosepine.base}
-format-foreground	 = ${rosepine.text}
-format-prefix            = ${icons.date}
-format-prefix-foreground = ${rosepine-dawn.gold}
-;format-prefix-background = ${rosepine.base}
-interval                 = 1.0
-label                    = " %time%"
-time                     = %A, %d/%m/%y %H:%M
-type                     = internal/date
+format-prefix            = "%{T1}󰥔 %{T-}"
+format-prefix-foreground = ${catppuccin-mocha.peach}
 
 [module/pulseaudio]
+type                     = internal/pulseaudio
+interval 		 = 5
+use-ui-max               = false
 format-volume            = <ramp-volume>
 format-volume-padding	 = 1
-format-volume-foreground = ${rosepine-dawn.iris}
-format-volume-background = ${rosepine.base}
-label-muted              = ${icons.pulseaudio-mute}
-label-muted-foreground   = ${rosepine-dawn.love}
-label-muted-background   = ${rosepine.base}
-ramp-volume-0            = ${icons.pulseaudio-0}
-ramp-volume-1            = ${icons.pulseaudio-1}
-ramp-volume-2            = ${icons.pulseaudio-2}
-ramp-volume-3            = ${icons.pulseaudio-3}
-type                     = internal/pulseaudio
-use-ui-max               = false
+format-volume-foreground = ${catppuccin-mocha.peach}
+label-muted-foreground   = ${catppuccin-mocha.red}
+ramp-volume-0            = %{T2}󰖁 %{T-}
+ramp-volume-1            = %{T2}󰕿 %{T-}
+ramp-volume-2            = %{T2}󰖀 %{T-}
+ramp-volume-3            = %{T2}󰕾 %{T-}
+label-muted              = %{T2}󰝟 %{T-}
+click-right 		 = pavucontrol
 
-[module/sysmenu]
-click-left         = $DOTFILES/scripts/powermenu.sh
-click-right        = $DOTFILES/scripts/powermenu.sh
-content            = ${icons.sysmenu}
-content-foreground = ${rosepine-dawn.iris}
-content-background =${rosepine.base}
-content-padding    = 1
-type               = custom/text
+[module/power]
+type               	 = custom/text
+content            	 = "%{T2} %{T-}"
+content-foreground 	 = ${catppuccin-mocha.peach}
+content-padding    	 = 1
+click-left         	 = "$HOME/.config/rofi/powermenu.sh"
+click-right        	 = "$HOME/.config/rofi/powermenu.sh"
 
 [module/tray]
 type = internal/tray
-format-margin = 8px
-format-background = ${rosepine.highlight-low}
+format-margin = 10px
 tray-spacing = 8px
-
-[module/sep]
-content            = %{T5}%{T-}
-content-foreground = ${rosepine-dawn.gold}
-content-padding    = 1
-type               = custom/text
 
