--- a/.config/polybar/themes/rose-pine.ini
+++ b/.config/polybar/themes/rose-pine.ini
@@ -1,11 +1,13 @@
 [rosepine]
 base = #191724
 surface = #1f1d2e
+transparent = #dd191724
 overlay = #26233a
 muted = #6e6a86
 subtle = #908caa
 text = #e0def4
 love = #eb6f92
+warn = #d4061e
 gold = #f6c177
 rose = #ebbcba
 pine = #31748f
