--- a/.config/polybar/polybar.ini
+++ b/.config/polybar/polybar.ini
@@ -1,29 +1,26 @@
 include-file = modules.ini
-include-file = themes/rose-pine.ini
+include-file = themes/catppuccin.ini
+
+[settings]
+pseudo-transparency = true
 
 [bar/main]
-background     = ${rosepine.base}
+background     = ${catppuccin-mocha.transparent}
+foreground     = ${catppuccin-mocha.text}
 bottom         = false
 enable-ipc     = true
 fixed-center   = true
-font-0         = Fira Code Nerd Font:size=9:weight=bold;2
-font-1         = Fira Code Nerd Font:size=10:weight=bold;2
-font-2         = Fira Code Nerd Font:size=11:weight=bold;2
-font-3         = Fira Code Nerd Font:size=12:weight=bold;2
-font-4         = Fira Code Nerd Font:size=14:weight=bold;2
-foreground     = ${rosepine.text}
+font-0         = Fira Code Nerd Font:size=10:weight=bold
+font-1         = Fira Code Nerd Font:size=12:weight=bold
+font-2         = Fira Code Nerd Font:size=13:weight=bold
 height         = 35
 locale         = ${env:LANG:pt_BR.UTF8}
-module-margin  = 1
+module-margin  = 0
 modules-left   = workspace
 modules-center = network memory cpu temperature filesystem
-modules-right  = archupdate uptime date pulseaudio tray sysmenu
+modules-right  = update-hook update uptime date pulseaudio power tray
 monitor        = ${env:MONITOR}
-offset-x       = 0
-offset-y       = 0
-padding        = 2
-radius-bottom  = 2.0
-radius-top     = 0.0
+padding        = 0
 width          = 100%
 
 [bar/main0]
@@ -31,30 +28,5 @@ inherit = bar/main
 
 [bar/main1]
 inherit = bar/main
-modules-left =
-modules-center = workspace date
-modules-right =
 
-[icons]
-cpu                  = %{T0} %{T-}
-date                 = %{T0} %{T-}
-filesystem           = %{T0}  %{T-}
-memory               = %{T0}󰍛 %{T-}
-network-connected    = %{T0}󰱓 %{T-}
-network-disconnected = %{T0}󰅛 %{T-}
-network-loss         = %{T0}󰛵 %{T-}
-pulseaudio-0         = %{T0} %{T-}
-pulseaudio-1         = %{T0} %{T-}
-pulseaudio-2         = %{T0} %{T-}
-pulseaudio-3         = %{T0} %{T-}
-pulseaudio-mute      = %{T0}󰝟 %{T-}
-sysmenu              = %{T0} %{T-}
-temperature-cold     = %{T0}%{F#458588} %{F-}%{T-}
-temperature-normal   = %{T0}%{F#83a598}󰏈 %{F-}%{T-}
-temperature-hot      = %{T0}%{F#cc241d} %{F-}%{T-}
-update               = %{T4}%{F82E0AA}󰚰 %{F-}%{T-}
-uptime               = %{T0}󱎫 %{T-}
-vpnc        	     = %{T0}󰊠 %{T-}
-vpnd                 = %{T0}󰧵 %{T-}
-backup =  
 
