fish: change functions

--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -23,13 +23,13 @@ format-disconnected                = <label-disconnected>
 type                     = internal/memory
 interval                 = 1
 warn-percentage          = 90
-label                    = %percentage_used:3%% (%used%)
+label                    = "%used% (%percentage_used%%)"
 format                   = <label>
 format-padding           = 1
-format-prefix            = "%{T0} %{T-}"
-label-warn 		 = "%percentage_used:3%% (%used%)"
+format-prefix            = "%{T0}  %{T-}"
+label-warn 		 ="%used% (%percentage_used%%)"
 format-warn              = <label-warn>
-format-warn-prefix       = "%{T0} %{T-}"
+format-warn-prefix       = "%{T0}  %{T-}"
 format-prefix-foreground = ${catppuccin-mocha.mauve}
 format-warn-padding      = 1
 format-warn-foreground   = ${catppuccin-mocha.error}
@@ -86,15 +86,17 @@ format-mounted-prefix-foreground = ${catppuccin-mocha.maroon}
 type      			 = custom/ipc
 initial   			 = 0
 hook-0    			 = archtools update -cn -a 12 --log off
-hook-1    			 = kitty -e --detach archtools update -i --log off 
+hook-1    			 = archtools update -cnr --log off 
+hook-2    			 = kitty -e --detach archtools update -u --log off 
 label 	  			 = %output%
 format    			 = <output>
 format-padding			 = 1
-format-prefix 	        	 = "%{T1}󱘺 %{T-}"
-format-prefix-foreground 	 = ${catppuccin-mocha.blue}
+format-prefix 	        	 = "%{T1}󰚰 %{T-}"
+format-prefix-foreground 	 = ${catppuccin-mocha.peach}
 format-foreground 	         = ${catppuccin-mocha.error}
-click-left			 = "dunstctl history-pop 755"
-click-right			 = "#updates.hook.1"
+click-left			 = "#update-hook.hook.0"
+click-right			 = "#update-hook.hook.1"
+double-click-right  		 = "#update-hook.hook.2"
 
 [module/update]
 type     = custom/script
