--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -3,13 +3,13 @@ set-option -g base-index 1
 set-option -s escape-time 0
 set-option -g mouse on
 
-# Nvim
+# Neovim
 set-option -g focus-events on
 set -ga terminal-overrides ",xterm-256color:Tc"
 
 
 unbind r
-bind -n M-r source-file ~/.config/tmux/tmux.conf
+bind -n M-r source-file "$HOME"/.config/tmux/tmux.conf
 set -g prefix C-a
 
 # Remap
@@ -24,16 +24,25 @@ bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 
 # Pane
+bind -n M-m select-pane -m # mark
+bind -n M-M select-pane -M # unmark
 bind -n M-q confirm-before -p "Kill Pane #P (y/n)" kill-pane
-#bind -n M-j command-prompt -p "join pane from:"  "join-pane -s '%%'"
-bind -n M-s command-prompt -p "send pane to:"  "join-pane -t '%%'"
-bind -n M-h split-pane -h -c '#{pane_current_path}'
-bind -n M-v split-pane -v -c '#{pane_current_path}'
+bind -n M-s command-prompt -p "Move pane #P to window: " "movep -t :'%%'"
+bind -n M-h split-pane -hc '#{pane_current_path}'
+bind -n M-v split-pane -vc '#{pane_current_path}'
 bind -n M-! break-pane
+
+# Select
 bind -n M-Up select-pane -U 
 bind -n M-Down select-pane -D 
 bind -n M-Left select-pane -L 
 bind -n M-Right select-pane -R 
+
+# Swap
+bind -n M-S-Up swap-pane -U
+bind -n M-S-Down swap-pane -D
+
+# Resize
 bind -n M-C-Down  resize-pane -D 5
 bind -n M-C-Left  resize-pane -L 5
 bind -n M-C-Right resize-pane -R 5
