--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -14,6 +14,7 @@
 	],
 	"modules-right": [
 		"custom/updates",
+		"custom/uptime",
 		"pulseaudio",
 		"clock",
 		"tray",
@@ -25,7 +26,7 @@
 		"on-click": "activate",
 		"active-only": false,
 		"all-outputs": true,
-		"format": "{name} {icon}",
+		"format": "{name}",
 		"format-icons": {
 			"urgent": "-",
 			"active": "",
@@ -33,17 +34,21 @@
 		}
 	},
 	"hyprland/window": {
+		"format": "{title}",
 		"rewrite": {
-			"": "<span foreground='#89b4fa'> </span> Hyprland"
+			"": "<span foreground='#89b4fa'> </span> Hyprland ",
+			"(.*) - Brave": "<span foreground='#FB542B'> </span>$1",
+			"(^n (.*))": "<span foreground='#048f1b'> </span>$2",
+			"(~\/.*)": "<span foreground='#07a8f2'> </span>$1"
 		},
-		"separate-outputs": true
+		"separate-outputs": false
 	},
 	"tray": {
-		"icon-size": 16,
+		"icon-size": 20,
 		"spacing": 10
 	},
 	"clock": {
-		"format": "{:L%A, %d/%m/%y %H:%M}",
+		"format": "{:L%a %d/%m/%y %H:%M}",
 		"on-click": "ags toggle calendar",
 		"timezone": "America/Sao_Paulo",
 		"tooltip": false
@@ -98,7 +103,7 @@
 		},
 		"format": "{icon} {used:0.1f}GB",
 		"format-icons": [
-			"<span color='#c708b4'> </span>"
+			"<span color='#f207f2'> </span>"
 		],
 		"format-critical": "󰀦 {percentage}%",
 		"tooltip": true,
@@ -115,21 +120,22 @@
 	"custom/updates": {
 		"format": "{} {icon}",
 		"format-icons": [
-			"<span color='#e0480b'> </span>"
+			"<span color='#ffffff'> </span>"
 		],
 		"escape": false,
-		"exec": "~/dotfiles/scripts/archtools update -a 12 -cn",
+		"exec": "archtools update -a 12 -cn --log info",
 		"exec-on-event": false,
 		"interval": 43200,
 		"tooltip": false,
-		"on-click": "dunstctl history-pop 755",
-		"on-click-right": "dunstctl close 755",
+		"on-click": "archtools update -cn --log info",
+		"on-click-right": "archtools update -rcn --log info",
 		"signal": 8
 	},
 	// Rofi Application Launcher
 	"custom/appmenu": {
-		"format": "",
-		"on-click": "sleep 0.2;rofi -show drun -theme ~/.config/rofi/styles/style_2.rasi"
+		"format": "<span color= '#0586f7'></span>",
+		"on-click": "sleep 0.2;rofi -show drun -theme ~/.config/rofi/styles/style_2.rasi",
+		"tooltip": false
 	},
 	"custom/power": {
 		"format": "⏻",
@@ -158,5 +164,11 @@
 			]
 		},
 		"on-click": "pavucontrol"
+	},
+	"custom/uptime": {
+		"format": "󰦖 {}",
+		"exec": "uptime -p | sed -e 's/up //g' | sed -e 's/ hours, /h:/g' | sed -e 's/ minutes/m/g'",
+		"interval": "60",
+		"tooltip": false
 	}
 }
